# StudyTracker-FER

./: .gitignore  CMakeLists.txt  README.md
backend/: CMakeLists.txt
backend/include/backend/sqlite/: Database.h  SQLiteSessionRepository.h  SQLiteSubjectRepository.h  SQLiteTaskRepository.h  Schema.h
backend/src/sqlite/: Database.cpp  SQLiteSessionRepository.cpp  SQLiteSubjectRepository.cpp  SQLiteTaskRepository.cpp
core/: CMakeLists.txt
core/include/core/domain/: Session.h  StudySession.h  Subject.h  Task.h
core/include/core/persistence/: Database.h  Schema.h
core/include/core/repositories/: ISessionRepository.h  ISubjectRepository.h  ITaskRepository.h
core/include/core/services/: AppContext.h  SessionService.h  SubjectService.h  TaskService.h
core/sql/: 001_create_tables.sql
core/src/domain/: Subject.cpp
core/src/persistence/: Database.cpp
core/src/services/: AppContext.cpp  SessionService.cpp  SubjectService.cpp  TaskService.cpp
ui/: CMakeLists.txt  main.cpp  style.qss
ui/include/: AnalyticsPage.h  Application.h  Fonts.h  HomePage.h  Icons.h  MainWindow.h  ProfilePage.h  SidebarWidget.h  SubjectsPage.h
ui/include/components/: CustomBtn.h  CustomCalendar.h  DatePickerEdit.h  Header.h  Logo.h  Separator.h  SessionCard.h  SessionHistoryMenu.h  SessionPageMenu.h  SidebarBtn.h  StudyTimer.h  SubjectCard.h  TaskCard.h  TaskListMenu.h  TaskPageMenu.h
ui/include/events/: DomainEvents.h  SubjectEvent.h
ui/include/layout/: AddSessionForm.h  AddSubjectForm.h  AddTaskForm.h  FlowLayout.h  MainWindow.h  SessionHistory.h  Sidebar.h  TaskList.h  Titlebar.h
ui/include/pages/: AnalyticsPage.h  CalendarPage.h  DashboardPage.h  LeaderboardPage.h  PreferencesPage.h  ProfilePage.h  SessionsPage.h  SubjectsPage.h  TasksPage.h
ui/resources/: resources.qrc
ui/resources/styles/: theme.qss
ui/src/: AnalyticsPage.cpp  Application.cpp  HomePage.cpp  MainWindow.cpp  ProfilePage.cpp  SidebarWidget.cpp  SubjectsPage.cpp  main.cpp
ui/src/components/: CustomBtn.cpp  CustomCalendar.cpp  DatePickerEdit.cpp  Header.cpp  Logo.cpp  Separator.cpp  SessionCard.cpp  SessionHistoryMenu.cpp  SessionPageMenu.cpp  SidebarBtn.cpp  StudyTimer.cpp  SubjectCard.cpp  TaskCard.cpp  TaskListMenu.cpp  TaskPageMenu.cpp
ui/src/layout/: AddSessionForm.cpp  AddSubjectForm.cpp  AddTaskForm.cpp  FlowLayout.cpp  MainWindow.cpp  SessionHistory.cpp  Sidebar.cpp  TaskList.cpp  Titlebar.cpp
ui/src/pages/: AnalyticsPage.cpp  CalendarPage.cpp  DashboardPage.cpp  LeaderboardPage.cpp  PreferencesPage.cpp  ProfilePage.cpp  SessionsPage.cpp  SubjectsPage.cpp  TasksPage.cpp
